<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.blockAccount.BlockAccountResultFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/lp_img_block_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:src="@drawable/icon_upgradewallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_block_account" />

    <TextView
        android:id="@+id/lp_text_block_account_title_successfully"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/your_account_has_been_blocked_successfully"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lp_img_block_account" />
    <TextView
        android:id="@+id/lp_text_block_account_body"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lp_text_block_account_title_successfully"
        android:text="@string/you_can_no_longer_log_in_or_perform_transactions_n_n_to_reactivate_your_account_please_contact_out_support_team_at_support_liquidpay_com_n_n_thank_yoi_for_ensuring_the_security_of_your_account_a_bit_funny"
        android:textSize="16sp"/>
    <Button
        android:id="@+id/lp_btn_okay"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/okay"
        android:textSize="16sp"
        android:textColor="#FCFCFC"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lp_text_block_account_body" />
</androidx.constraintlayout.widget.ConstraintLayout>