<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="148dp"

                android:layout_marginTop="16dp"
                android:text="@string/your_voucher"
                android:textColor="@color/text_color_voucher"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/right_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/voucher_margin_end_24dp"
                android:src="@drawable/right_icons"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/tvSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/voucher_margin_start_24dp"
                android:layout_marginTop="@dimen/voucher_margin_top_8dp"
                android:text="@string/selected_vouchers_0"
                android:textColor="#121212"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <TextView
                android:id="@+id/tvSGD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/voucher_margin_end_24dp"
                android:text="@string/sgd_0_00"
                android:textColor="@color/text_color_voucher"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvSelected"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvSelected" />

            <TextView
                android:id="@+id/tvNewPayable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/voucher_margin_start_24dp"
                android:layout_marginTop="@dimen/voucher_margin_top_4dp"
                android:text="@string/new_payable_amount"
                android:textColor="@color/text_color_voucher"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSelected" />


            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/voucher_margin_end_24dp"
                android:text="@string/newpayable"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvNewPayable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvNewPayable" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginStart="@dimen/voucher_margin_start_24dp"
                android:layout_marginTop="@dimen/voucher_margin_top_16dp"
                android:layout_marginEnd="@dimen/voucher_margin_end_24dp"
                android:backgroundTint="#8A2AA2"
                android:text="@string/conti"
                android:textColor="#FCFCFC"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNewPayable" />

            <TextView
                android:id="@+id/tvDisplayVouchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/voucher_margin_start_24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/displaying_54_of_54_vouchers"
                android:textColor="@color/text_color_voucher"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnContinue" />

            <TextView
                android:id="@+id/tvSelectedAllVoucher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/voucher_margin_end_24dp"
                android:text="@string/select_all_54_vouchers"
                android:textColor="@color/text_color_selectAll"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvDisplayVouchers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvDisplayVouchers" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvVoucher"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container1"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="2"
            tools:listitem="@layout/item_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>