<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.blockAccount.BlockAccountPinVerifyFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/lp_title_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/before_we_continue_to_block_you_account"
        android:textSize="24sp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/lp_pin_verify_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="28dp"
        android:background="#CB9DF0"
        app:layout_constraintTop_toBottomOf="@+id/lp_title_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </View>
    <LinearLayout
        android:id="@+id/lp_button_block_account"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lp_pin_verify_view"
        android:orientation="vertical">
        <Button
            android:id="@+id/lp_btn_block_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/block_account"
            android:textSize="16sp"
            android:textColor="#FCFCFC"
            />
        <TextView
            android:id="@+id/lp_title_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="#7A35B0"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>